--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .quadrado {
